# free-proxy-configurations

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  proxy-updater.service  push-to-github.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  test.yml  update-configs.yml  update-proxies.yml
clients/: hiddify-setup.md  singbox-setup.md  v2rayng-setup.md
configs/: shadowsocks.txt  singbox.json  universal-base64.txt  universal.txt  v2ray.txt
docs/: FAQ.md  api.md  security.md  troubleshooting.md
scripts/: __init__.py  auto_updater.py  proxy_generator.py  setup.py
templates/: shadowsocks_template.json  trojan_template.json  vmess_template.json
tests/: __init__.py  config_validator.py  security_test.py  test_basic.py
tutorials/: advanced-guide.md  beginner-guide.md
